fix issues in create perfect employee